# vulkan-init

./: CMakeLists.txt  README.md  copy-windows-dependencies.txt  git-commit.sh  git-push.sh
.github/workflows/: cmake-single-platform.yml  cmake-single-platform2.yml  cmake-single-platform3.yml
scripts/: install_vulkansdk-ubuntu.sh  install_vulkansdk_ubuntu18.04.sh  install_vulkansdk_ubuntu22.04.sh
triangle/: CMakeLists.txt  makefile  makefile-linux  makefile-macos  makefile-mingw
triangle/shaders/: compileshaders.sh  shader-frag.frag  shader-vert.spv  shader-vert.vert
triangle/source/: CVulkanApp.cpp  CVulkanApp.h  main.cpp
